[gd_scene load_steps=11 format=3 uid="uid://bsnpuv1ss4bxe"]

[ext_resource type="Shader" uid="uid://d2qbwcjlqoech" path="res://assets/shaders/crt_local.gdshader" id="1_jw7r8"]
[ext_resource type="BitMap" uid="uid://b8klkndbgm8ya" path="res://godot4/ui/screens/main_menu/buttons/area_Campaign.png" id="2"]
[ext_resource type="Script" uid="uid://b18t4o8grk0q7" path="res://ui/fancy_menus/FancyButton.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://bdx58bmvismid" path="res://godot4/ui/screens/main_menu/buttons/graphics_Campaign.png" id="4"]
[ext_resource type="AudioStream" uid="uid://bi38pkb44oyyx" path="res://assets/audio/UI_effects/switch-selection.wav" id="4_fyhuo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xr73u"]
shader = ExtResource("1_jw7r8")
shader_parameter/boost = 1.55
shader_parameter/grille_opacity = 0.85
shader_parameter/scanlines_opacity = 0.75
shader_parameter/vignette_opacity = 0.2
shader_parameter/scanlines_speed = 2.0
shader_parameter/show_grille = false
shader_parameter/show_scanlines = true
shader_parameter/show_vignette = false
shader_parameter/show_curvature = false
shader_parameter/screen_size = Vector2(160, 90)
shader_parameter/aberration_amount = 0.7
shader_parameter/move_aberration = false
shader_parameter/aberration_speed = 1.0
shader_parameter/pincushion = 1.0

[sub_resource type="Animation" id="3"]
resource_name = "Grow"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.4),
"transitions": PackedFloat32Array(0.5, -0.5, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1.07, 1.07)]
}

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="5"]
resource_name = "Shrink"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(2, 0.5),
"update": 0,
"values": [Vector2(1.07, 1.07), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ajxy4"]
_data = {
&"Grow": SubResource("3"),
&"RESET": SubResource("4"),
&"Shrink": SubResource("5")
}

[node name="FancyButton" type="TextureButton"]
material = SubResource("ShaderMaterial_xr73u")
offset_right = 279.0
offset_bottom = 503.0
texture_normal = ExtResource("4")
texture_click_mask = ExtResource("2")
script = ExtResource("3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ajxy4")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_fyhuo")
bus = &"SFX"

[connection signal="focus_entered" from="." to="." method="_on_FancyButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_FancyButton_focus_exited"]
